--- a/css/resume.css
+++ b/css/resume.css
@@ -58,7 +58,7 @@ p.lead {
   display: inline-block;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: rgb(56, 189, 78);
+  background-color: #0d4edb;
   color: #fff !important;
   border-radius: 100%;
   text-align: center;
@@ -77,11 +77,12 @@ p.lead {
 
 .dev-icons {
   font-size: 3rem;
-  color: rgb(56, 189, 78);
+  color: #0d4edb;
 }
 
 .dev-icons .list-inline-item i:hover {
   color: black;
+  transform: scale(1.2);
 }
 
 #sideNav .navbar-nav .nav-item .nav-link {
@@ -121,6 +122,7 @@ p.lead {
     max-width: 10rem;
     max-height: 10rem;
     border: 0.5rem solid rgba(156, 152, 152, 0.459);
+    
   }
   #sideNav .navbar-collapse {
     display: -webkit-box;
@@ -177,24 +179,26 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: rgb(56, 189, 78) !important;
+  background-color: rgb(5, 7, 6) !important;
 }
 
 .text-primary {
-  color: rgb(56, 189, 78) !important;
+  color: rgb(7, 8, 7) !important;
 }
 
 a {
-  color: rgb(56, 189, 78);
+  color: black;
+  
 }
 
-a:hover, a:focus, a:active {
-  color:black;
+a:hover {
+  color: gray;
+  transform: scale(1.2);
 }
 
 #name {
-  animation: flow 30s ease-in-out infinite;
-  background: linear-gradient(-60deg, #2dd436, #839285, #053b0c, #1bdb1b);
+  animation: flow 20s ease-in-out infinite;
+  background: linear-gradient(-60deg, #0d4edb, #4b499c, #76839e, #d1d2da);
   background-size: 300%;
   background-clip: text;
   -webkit-background-clip: text;
